--- a/header.tex
+++ b/header.tex
@@ -9,3 +9,6 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+
+\theoremstyle{definition}
+\newtheorem{defn}[thm]{Definition}
